# jamlib

./: .gitignore  .gitmodules  BuildAllRelease.fish  BuildAllRelease.sh  BuildGameRelease.fish  BuildGameRelease.sh  BuildIcon.fish  CMakeInclude.cmake  CMakeLists.txt  InitDependencies.fish  InitDependencies.sh  LICENSE  NewProject.sh  README.md  TODO.txt  WebIndex.html
CMake/: MinGWToolchain.cmake  WebToolchain.cmake
Sandbox/: Main.cpp
Sandbox/Assets/: ParticleEmitter.ype
Src/: Asset.cpp  Asset.hpp  Camera2D.cpp  Camera2D.hpp  FindAssetsDir.cpp  FindAssetsZip.cpp  Game.cpp  Game.hpp  Input.cpp  Input.hpp  JamLib.hpp  ParticleEmitterType.cpp  ParticleEmitterType.hpp  Particles.cpp  Particles.hpp  Random.hpp  Rectangle.cpp  Rectangle.hpp  STB.cpp  SaveFile.cpp  SaveFile.hpp  Utils.cpp  Utils.hpp
Src/Audio/: Audio.cpp  Audio.hpp  AudioLoad.cpp  AudioUtils.cpp  AudioUtils.hpp
Src/Graphics/: Buffer.cpp  Format.cpp  Format.hpp  GLHandle.hpp  GaussianBlur.cpp  GaussianBlur.hpp  Graphics.cpp  Graphics.hpp  Graphics2D.cpp  Graphics2D.hpp  OpenGL.hpp  OpenGL_Desktop.cpp  OpenGL_ES.cpp  Sampler.cpp  Sampler.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexLayout.cpp
Src/Lib/: API.hpp  Game.cpp  Game.hpp  Input.cpp  Input.hpp  Rectangle.cpp  Rectangle.hpp  Utils.cpp  Utils.hpp
Src/Lib/Graphics/: Buffer.cpp  Buffer.hpp  GLHandle.cpp  Graphics.cpp  Graphics.hpp  Graphics2D.cpp  Graphics2D.hpp  OpenGL.hpp  OpenGL_Desktop.cpp  OpenGL_ES.cpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexLayout.cpp  VertexLayout.hpp
Src/Sandbox/: Main.cpp
Src/World/: GridPathFinder.cpp  GridPathFinder.hpp  TMXTerrain.cpp  TMXTerrain.hpp  TileMap.cpp  TileMap.hpp  TileSet.cpp  TileSet.hpp  TileSolidityMap.cpp  TileSolidityMap.hpp
Template/: CMakeLists.txt  CleanPCH.sh  PCH.hpp
Template/Src/: Game.cpp
